[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/MainUI/TinyFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/MainUI/SmallFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/GameUI/EventUI/EventUI.gd" type="Script" id=3]
[ext_resource path="res://Scenes/MainUI/SmallFontLightTheme.tres" type="Theme" id=4]
[ext_resource path="res://Assets/Textures/Events/bed.png" type="Texture" id=5]

[node name="EventUI" type="Control"]
margin_left = 150.0
margin_right = 490.0
margin_bottom = 204.0
mouse_filter = 2
theme = ExtResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="EventPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="EventPanel/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 331.0
margin_bottom = 196.0

[node name="VBoxContainer" type="VBoxContainer" parent="EventPanel/MarginContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="EventPanel/MarginContainer/Control/VBoxContainer"]
margin_right = 323.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 2 )
text = "Waking Up"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="EventPanel/MarginContainer/Control/VBoxContainer"]
margin_top = 22.0
margin_right = 323.0
margin_bottom = 169.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="EventPanel/MarginContainer/Control/VBoxContainer/HBoxContainer"]
margin_right = 159.0
margin_bottom = 147.0
size_flags_horizontal = 3
texture = ExtResource( 5 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BodyLabel" type="Label" parent="EventPanel/MarginContainer/Control/VBoxContainer/HBoxContainer"]
margin_left = 163.0
margin_right = 323.0
margin_bottom = 147.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "You wake up in YOUR BEDROOM.
You smell PANCAKES.
You hear sounds coming from the KITCHEN."
align = 1
valign = 1
autowrap = true

[node name="ContinueButton" type="Button" parent="EventPanel/MarginContainer/Control/VBoxContainer"]
margin_left = 137.0
margin_top = 173.0
margin_right = 186.0
margin_bottom = 188.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 1 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="EventPanel/MarginContainer/Control/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
